# heliotorrent

./: .gitignore  .pylintrc  Cargo.toml  README.md  TODO.md  TileLog.py  __init__.py  basic_config.yaml  checkpoints.py  cli.py  cloudflare_pages_deploy.py  compress.sh  compress_data_tiles.py  create_rss.py  ct_torrent_generator.py  heliotorrent.py  interactive_config.py  issuers.py   make_torrents.py  pyproject.toml  requirements.txt  scraper.py  static_ct_scraper.py  test.sh  test_config.yaml  test_interactive_config.py  test_scraper.py  test_tilelog.py  test_util.py  util.py
.github/: copilot-instructions.md
.github/workflows/: pylint.yml  python-app.yml
docs/: clients.md  design.md  design.md   flexget.yml  providers.md  spec.md  static-ct-torrent-extension.md  tree-size-calcs.numbers
experiments/: compress_data_tiles.py  flexget.yml  nginx-proxy-cache-config.conf  nginx-proxy-cache.sh  notes.md  redirect.py  run-docker.sh  test.sh  webseed.py
experiments/nginx/: docker-compose.yml  notes.md
experiments/nginx/conf.d/: default.conf
heliostat/: Cargo.toml  build.rs
heliostat/src/: e2e_test.rs  main.rs
heliostat/test/: test_config.yaml
heliostat/test/torrents/geomys_tuscolo2025h2/: L01-0-1048576.torrent  feed.xml
lib/: TileLog.py  tilelog_html.py  util.py
src/: e2e_test.rs  main.rs
static/: torrents.css
test/data/geomys_tuscolo2025h2/: README.md
tests/: test_interactive_config.py  test_tilelog.py  test_util.py
